--- a/app/views/manage/appeals/search/v2/decided.html
+++ b/app/views/manage/appeals/search/v2/decided.html
@@ -47,8 +47,8 @@
 
         <div class="govuk-grid-column-full">
 
+            {% include "./_includes/filters-v3.html" %}
             {% include "./_includes/secondary-nav.html" %}
-
 
             {# Size modifiers: xl, l, m #}
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
