--- a/app/views/manage/appeals/search/v2/invalid-search-applied.html
+++ b/app/views/manage/appeals/search/v2/invalid-search-applied.html
@@ -50,9 +50,8 @@
 
         <div class="govuk-grid-column-full">
 
-
+            {% include "./_includes/filters-v3.html" %}
             {% include "./_includes/secondary-nav-with-search.html" %}
-
 
             {# Size modifiers: xl, l, m #}
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
