--- a/app/views/manage/appeals/search/v2/waiting-for-review.html
+++ b/app/views/manage/appeals/search/v2/waiting-for-review.html
@@ -47,10 +47,9 @@
 
         <div class="govuk-grid-column-full">
 
-
+            {% include "./_includes/filters-v3.html" %}
 
             {% include "./_includes/secondary-nav.html" %}
-
 
             {# Size modifiers: xl, l, m #}
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
