--- a/app/views/appeal/ldc/v4/lpaq/confirmation.html
+++ b/app/views/appeal/ldc/v4/lpaq/confirmation.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Appeal submitted' %}
+{% set title = 'Questionnaire submitted' %}
 {% set back = false %}
 
 {% block content %}
@@ -15,23 +15,28 @@
       </h2>    
 
       <p class="govuk-body">
-        We will send you a confirmation email with your appeal reference number and a link to download a copy of your appeal.
-      </p>
+      You need to email a copy of your questionnaire and any documents you uploaded to the appellant.       </p>
 
       <p class="govuk-body">
         If you need to contact us, include your appeal reference number.
       </p>
 
       <p class="govuk-body govuk-!-margin-bottom-6">
-        <a href="/appeal/more-than-one-appeal/v5/your-appeals" class="govuk-link govuk-link--no-visited-state">
-          View your appeals
+        <a href="#" class="govuk-link govuk-link--no-visited-state">
+          Download your questionnaire (PDF)
         </a>
       </p>
 
       <p class="govuk-body">
-        <a href="#0">
-          What did you think of this service?
-        </a> (takes 30 seconds)
+        <a href="#">
+      Download your documents (ZIP)
+      </a>
+      </p>
+
+      <p class="govuk-body">
+        <a href="/your-appeals" class="govuk-link govuk-link--no-visited-state">
+      View your planning appeals
+      </a>
       </p>
 
     </div>
