--- a/app/views/appeal/ldc/v4/lpaq/how-many-days-inquiry.html
+++ b/app/views/appeal/ldc/v4/lpaq/how-many-days-inquiry.html
@@ -14,8 +14,9 @@
     isPageHeading: true
   },
   classes: "govuk-input--width-5",
-  id: "width-5",
-  name: "width5"
+  id: "inquiry-days",
+  name: "inquiry-days",
+  value: data['inquiry-days']
 }) }}
 
 {% endblock %}
