--- a/app/views/appeal/ldc/v4/lpaq/prefer-hearing.html
+++ b/app/views/appeal/ldc/v4/lpaq/prefer-hearing.html
@@ -8,8 +8,9 @@
 {% from "govuk/components/textarea/macro.njk" import govukTextarea %}
 
 {{ govukTextarea({
-  name: "moreDetail",
-  id: "more-detail",
+  name: "prefer-hearing",
+  id: "prefer-hearing",
+  value: data['prefer-hearing'],
   label: {
     text: title,
     classes: "govuk-label--l",
