--- a/app/views/appeal/ldc/v4/lpaq/upload-enforcement-notice.html
+++ b/app/views/appeal/ldc/v4/lpaq/upload-enforcement-notice.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
 {% set title = 'Upload the enforcement notice ' %}
-{% set uploadDataKey = 'enforcement-notice' %}
+{% set uploadDataKey = 'upload-enforcement-notice' %}
 
 {% block questions %}
 <span class="govuk-caption-l">{{serviceName}}</span>
