--- a/app/views/appeal/ldc/v4/lpaq/upload-other-relevant-matters.html
+++ b/app/views/appeal/ldc/v4/lpaq/upload-other-relevant-matters.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
 {% set title = 'Are there any other relevant matters?' %}
-{% set uploadDataKey = 'other-relevant-matters' %}
+{% set uploadDataKey = 'upload-other-relevant-matters' %}
 
 {% block questions %}
 <span class="govuk-caption-l">Planning officer’s report and supporting documents</span>
