--- a/app/views/appeal/ldc/v4/lpaq/upload-planning-officers-report-decision-notice.html
+++ b/app/views/appeal/ldc/v4/lpaq/upload-planning-officers-report-decision-notice.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
 {% set title = "Upload the planning officer's report or what your decision notice would have said" %}
-{% set uploadDataKey = 'planning-officer-report' %}
+{% set uploadDataKey = 'upload-planning-officers-report-decision-notice' %}
 
 {% block questions %}
 <span class="govuk-caption-l">Planning officer's report and supporting documents</span>
