--- a/app/views/appeal/ldc/v4/lpaq/upload-related-application.html
+++ b/app/views/appeal/ldc/v4/lpaq/upload-related-application.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
 {% set title = 'Upload related applications' %}
-{% set uploadDataKey = 'related-applications' %}
+{% set uploadDataKey = 'upload-related-applications' %}
 
 {% block questions %}
 <span class="govuk-caption-l">{{serviceName}}</span>
