--- a/app/views/appeal/ldc/v4/lpaq/task-list__site-access.html
+++ b/app/views/appeal/ldc/v4/lpaq/task-list__site-access.html
@@ -3,8 +3,8 @@
   {% set siteAccessRequired = [
     data['inspector-access-appeal-site'],
     data['inspector-enter-neighbour-site'],
-    data['neighbour-address'],
-    data['neighbours'],
+    data['neighbours-address-line-1'],
+    data['add-neighbours'],
     data['health-and-safety']
   ] %}
   {% set siteAccessAnswered = siteAccessRequired | reject("equalto", undefined) | reject("equalto", "") | list %}
@@ -47,13 +47,13 @@
       ],
       [
         { text: "Neighbours", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
-        { text: data['neighbours'] if data['neighbours'] else "Not started", classes: "govuk-!-width-one-half" },
-        { html: '<a href="neighbours" class="govuk-link">Change</a>' if data['neighbours'] else '<a href="neighbours" class="govuk-link">Answer</a>', classes: "govuk-!-text-align-right" }
+        { text: data['add-neighbours'] if data['add-neighbours'] else "Not started", classes: "govuk-!-width-one-half" },
+        { html: '<a href="neighbours" class="govuk-link">Change</a>' if data['add-neighbours'] else '<a href="neighbours" class="govuk-link">Answer</a>', classes: "govuk-!-text-align-right" }
       ],
       [
         { text: "Neighbour address", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
-        { text: data['neighbour-address'] if data['neighbour-address'] else "Not started", classes: "govuk-!-width-one-half" },
-        { html: '<a href="neighbours-address" class="govuk-link">Change</a>' if data['neighbour-address'] else '<a href="neighbours-address" class="govuk-link">Answer</a>', classes: "govuk-!-text-align-right" }
+        { text: data['neighbours-address-line-1'] if data['neighbours-address-line-1'] else "Not started", classes: "govuk-!-width-one-half" },
+        { html: '<a href="neighbours-address" class="govuk-link">Change</a>' if data['neighbours-address-line-1'] else '<a href="neighbours-address" class="govuk-link">Answer</a>', classes: "govuk-!-text-align-right" }
       ],
       [
         { text: "Health and safety", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
