adding link to submit questionnaire button and removing check your answers from flow - goes directly to confirmation because task list allows answer checking

--- a/app/views/appeal/ldc/v4/lpaq/task-list__submit.html
+++ b/app/views/appeal/ldc/v4/lpaq/task-list__submit.html
@@ -22,7 +22,8 @@
   {% else %}
     <p class="govuk-body">By submitting this questionnaire you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
     {{ govukButton({
-      text: "Submit questionnaire"
+      text: "Submit questionnaire",
+      href: "/confirmation"
     }) }}
   {% endif %}
 
