new filters added

--- a/app/views/manage/appeals/search/v2/_includes/filters-v3.html
+++ b/app/views/manage/appeals/search/v2/_includes/filters-v3.html
@@ -119,7 +119,27 @@
                      value="Planning"
                      type="checkbox">
               <label class="govuk-label govuk-checkboxes__label"
-                     for="type-planning">Planning</label>
+                     for="type-planning">Advertisement</label>
+            </div>
+
+            <div class="govuk-checkboxes__item">
+              <input class="govuk-checkboxes__input"
+                     id="type-planning"
+                     name="type"
+                     value="Planning"
+                     type="checkbox">
+              <label class="govuk-label govuk-checkboxes__label"
+                     for="type-planning">Commercial planning (CAS)</label>
+            </div>
+
+            <div class="govuk-checkboxes__item">
+              <input class="govuk-checkboxes__input"
+                     id="type-householder"
+                     name="type"
+                     value="Householder"
+                     type="checkbox">
+              <label class="govuk-label govuk-checkboxes__label"
+                     for="type-householder">Enforcement notice</label>
             </div>
 
             <div class="govuk-checkboxes__item">
@@ -131,6 +151,17 @@
               <label class="govuk-label govuk-checkboxes__label"
                      for="type-householder">Householder</label>
             </div>
+            
+            <div class="govuk-checkboxes__item">
+              <input class="govuk-checkboxes__input"
+                     id="type-planning"
+                     name="type"
+                     value="Planning"
+                     type="checkbox">
+              <label class="govuk-label govuk-checkboxes__label"
+                     for="type-planning">Planning</label>
+            </div>
+
 
           </div>
         </div>
