--- a/app/views/manage/appeals/search/v2/active.html
+++ b/app/views/manage/appeals/search/v2/active.html
@@ -43,7 +43,7 @@
 <div class="govuk-grid-row">
 
     <div class="govuk-grid-column-full">
-        
+
             {% include "./_includes/filters-v3.html" %}
             {% include "./_includes/secondary-nav.html" %}
 
@@ -72,7 +72,7 @@
                               </strong>
                         </th>
                         <td class="govuk-table__cell">Spital House, Lensfield Rd, Cambridge CB2 1ER</td>
-                        <td class="govuk-table__cell">Householder</td>
+                        <td class="govuk-table__cell">Enforcement</td>
                         <td class="govuk-table__cell">25 September 2025</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
                             Overdue
@@ -115,7 +115,7 @@
                             </a>
                         </th>
                         <td class="govuk-table__cell">Flat 3, 12 Bramblewick Road, Northwick Hollow, Somerset, ZZ1 146</td>
-                        <td class="govuk-table__cell">Householder</td>
+                        <td class="govuk-table__cell">Advertisement</td>
                         <td class="govuk-table__cell">25 September 2025</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
                             Overdue
@@ -132,7 +132,7 @@
                               </strong>
                         </th>
                         <td class="govuk-table__cell">7 Willowmere Crescent, Oakley Marsh, Kent, ZZ2 2TZ</td>
-                        <td class="govuk-table__cell">Planning</td>
+                        <td class="govuk-table__cell">Enforcement</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">3 days</td>
                           <td class="govuk-table__cell"><a href="#">Statement</a><br></td>
@@ -164,7 +164,7 @@
                               </strong>
                         </th>
                         <td class="govuk-table__cell">18 Redgate Terrace, Puddleby-on-Thames, Oxfordshire, ZZ4 49Q</td>
-                        <td class="govuk-table__cell">Householder</td>
+                        <td class="govuk-table__cell">Advertisement</td>
                         <td class="govuk-table__cell">25 September 2025</td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
                             Overdue
@@ -230,7 +230,7 @@
                             </a>
                         </th>
                         <td class="govuk-table__cell">Unit 9 (North), 3 Mill Wharf, Stoneford, Yorkshire, Z8A Q5TG</td>
-                        <td class="govuk-table__cell">Householder</td>
+                        <td class="govuk-table__cell">Commercial advertisement</td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
                             New
