--- a/app/views/appeal/ldc/v4/lpaq/task-list__submit.html
+++ b/app/views/appeal/ldc/v4/lpaq/task-list__submit.html
@@ -23,7 +23,7 @@
     <p class="govuk-body">By submitting this questionnaire you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
     {{ govukButton({
       text: "Submit questionnaire",
-      href: "/confirmation"
+      href: "./confirmation"
     }) }}
   {% endif %}
 
