--- a/app/views/_layouts/layout-pins-manage-users.html
+++ b/app/views/_layouts/layout-pins-manage-users.html
@@ -23,7 +23,7 @@
 			items: [
 				{
 					text: 'Manage users',
-					href: '/#0'
+					href: '/manage/manage-users/v5/index.html'
 				},
 				{
 					text: 'Sign out',
